// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseFormula > parses add and mul operations with proper order of operations 1`] = `
{
  "c": [
    {
      "c": [
        {
          "r": [
            1,
            2,
          ],
          "t": 3,
          "v": 21,
        },
        {
          "r": [
            6,
            7,
          ],
          "t": 3,
          "v": 23,
        },
      ],
      "r": [
        4,
        4,
      ],
      "t": 1,
      "v": "*",
    },
    {
      "r": [
        11,
        12,
      ],
      "t": 2,
      "v": "ab",
    },
  ],
  "r": [
    9,
    9,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add and mul operations with proper order of operations 2`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 3,
      "v": 21,
    },
    {
      "c": [
        {
          "r": [
            6,
            7,
          ],
          "t": 3,
          "v": 23,
        },
        {
          "c": [
            {
              "r": [
                11,
                12,
              ],
              "t": 2,
              "v": "ab",
            },
            {
              "n": "pow",
              "o": [
                {
                  "r": [
                    20,
                    20,
                  ],
                  "t": 3,
                  "v": 2,
                },
                {
                  "r": [
                    23,
                    23,
                  ],
                  "t": 2,
                  "v": "z",
                },
              ],
              "r": [
                16,
                18,
              ],
              "t": 4,
            },
          ],
          "r": [
            14,
            14,
          ],
          "t": 1,
          "v": "*",
        },
      ],
      "r": [
        9,
        9,
      ],
      "t": 1,
      "v": "*",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add and mul operations with proper order of operations 3`] = `"((21*23)+ab)"`;

exports[`parseFormula > parses add and mul operations with proper order of operations 4`] = `"(21+(23*(ab*pow(2, z))))"`;

exports[`parseFormula > parses add operation minus 1`] = `"(123-456)"`;

exports[`parseFormula > parses add operation minus 2`] = `
{
  "c": [
    {
      "r": [
        1,
        3,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "r": [
        7,
        9,
      ],
      "t": 3,
      "v": 456,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "-",
}
`;

exports[`parseFormula > parses add operation with diffrent operands 1`] = `"(24+cd)"`;

exports[`parseFormula > parses add operation with diffrent operands 2`] = `"(cd+24)"`;

exports[`parseFormula > parses add operation with diffrent operands 3`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 3,
      "v": 24,
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with diffrent operands 4`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "cd",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 3,
      "v": 24,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with number operands 1`] = `"(123+456)"`;

exports[`parseFormula > parses add operation with number operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        3,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "r": [
        7,
        9,
      ],
      "t": 3,
      "v": 456,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with number operands, one of them negative 1`] = `"(123+-456)"`;

exports[`parseFormula > parses add operation with number operands, one of them negative 2`] = `
{
  "c": [
    {
      "r": [
        1,
        3,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "r": [
        7,
        10,
      ],
      "t": 3,
      "v": -456,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with variable operands 1`] = `"(ab+cd)"`;

exports[`parseFormula > parses add operation with variable operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "ab",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add, mul and pow operations with proper order of operations 1`] = `
{
  "c": [
    {
      "c": [
        {
          "c": [
            {
              "r": [
                1,
                2,
              ],
              "t": 3,
              "v": 21,
            },
            {
              "r": [
                4,
                4,
              ],
              "t": 3,
              "v": 3,
            },
          ],
          "r": [
            3,
            3,
          ],
          "t": 1,
          "v": "^",
        },
        {
          "r": [
            8,
            9,
          ],
          "t": 3,
          "v": 23,
        },
      ],
      "r": [
        6,
        6,
      ],
      "t": 1,
      "v": "*",
    },
    {
      "c": [
        {
          "r": [
            13,
            14,
          ],
          "t": 2,
          "v": "ab",
        },
        {
          "r": [
            16,
            16,
          ],
          "t": 3,
          "v": 2,
        },
      ],
      "r": [
        15,
        15,
      ],
      "t": 1,
      "v": "^",
    },
  ],
  "r": [
    11,
    11,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add, mul and pow operations with proper order of operations 2`] = `"(((21^3)*23)+(ab^2))"`;

exports[`parseFormula > parses empty string 1`] = `"0"`;

exports[`parseFormula > parses empty string 2`] = `
{
  "r": [
    0,
    0,
  ],
  "t": 3,
  "v": 0,
}
`;

exports[`parseFormula > parses funcCall 1`] = `
{
  "c": [
    {
      "r": [
        0,
        2,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "n": "sin",
      "o": [
        {
          "r": [
            10,
            10,
          ],
          "t": 3,
          "v": 3,
        },
      ],
      "r": [
        6,
        8,
      ],
      "t": 4,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses funcCall with 2 params 1`] = `"(123*pow(3, 2))"`;

exports[`parseFormula > parses funcCall with 2 params 2`] = `
{
  "c": [
    {
      "r": [
        0,
        2,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "n": "pow",
      "o": [
        {
          "r": [
            10,
            10,
          ],
          "t": 3,
          "v": 3,
        },
        {
          "r": [
            13,
            13,
          ],
          "t": 3,
          "v": 2,
        },
      ],
      "r": [
        6,
        8,
      ],
      "t": 4,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation division 1`] = `"(123/456)"`;

exports[`parseFormula > parses mul operation division 2`] = `
{
  "c": [
    {
      "r": [
        1,
        3,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "r": [
        7,
        9,
      ],
      "t": 3,
      "v": 456,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "/",
}
`;

exports[`parseFormula > parses mul operation with diffrent operands 1`] = `"(24*cd)"`;

exports[`parseFormula > parses mul operation with diffrent operands 2`] = `"(cd*24)"`;

exports[`parseFormula > parses mul operation with diffrent operands 3`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 3,
      "v": 24,
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with diffrent operands 4`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "cd",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 3,
      "v": 24,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with number operands 1`] = `"(123*456)"`;

exports[`parseFormula > parses mul operation with number operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        3,
      ],
      "t": 3,
      "v": 123,
    },
    {
      "r": [
        7,
        9,
      ],
      "t": 3,
      "v": 456,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with variable operands 1`] = `"(ab*cd)"`;

exports[`parseFormula > parses mul operation with variable operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "ab",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses single float number 1`] = `"222.232"`;

exports[`parseFormula > parses single float number 2`] = `
{
  "r": [
    0,
    6,
  ],
  "t": 3,
  "v": 222.232,
}
`;

exports[`parseFormula > parses single negative float number 1`] = `"-222.2"`;

exports[`parseFormula > parses single negative float number 2`] = `
{
  "r": [
    0,
    5,
  ],
  "t": 3,
  "v": -222.2,
}
`;

exports[`parseFormula > parses single negative number 1`] = `"-222"`;

exports[`parseFormula > parses single negative number 2`] = `
{
  "r": [
    0,
    3,
  ],
  "t": 3,
  "v": -222,
}
`;

exports[`parseFormula > parses single number 1`] = `"222"`;

exports[`parseFormula > parses single number 2`] = `
{
  "r": [
    0,
    2,
  ],
  "t": 3,
  "v": 222,
}
`;

exports[`parseFormula > parses single number with spaces 1`] = `
{
  "r": [
    7,
    10,
  ],
  "t": 3,
  "v": 2323,
}
`;

exports[`parseFormula > parses single variable 1`] = `"abc"`;

exports[`parseFormula > parses single variable 2`] = `
{
  "r": [
    0,
    2,
  ],
  "t": 2,
  "v": "abc",
}
`;

exports[`parseFormula > parses single variable with spaces 1`] = `"abc"`;

exports[`parseFormula > parses single variable with spaces 2`] = `
{
  "r": [
    7,
    9,
  ],
  "t": 2,
  "v": "abc",
}
`;
